2011-05-25  John ff  <jpff@cs.bath.ac.uk>

	* Engine/fgens.c (nextval): Ensure c moves on if not a number

2011-05-19  john ffitch  <jpff@codemist.co.uk>

	* OOps/cmath.c (exprndiset, kexprndi, aexprndi): New code for
	exprandi opcode; also cauchyi

2011-05-05  john ffitch  <jpff@codemist.co.uk>

	* SConstruct (optionsFilename): Try to check that the custom.py exists

2011-04-10  john ffitch  <jpff@codemist.co.uk>

	* OOps/aops.c (is_NaN, is_NaNa): New function
	(is_inf, is_NaNa): New function

2011-03-17  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c (csound_orc_expand_expressions):
	Generate kgoto rather than goto.  Not totally sure this is right yet

2011-02-09  john ffitch  <jpff@codemist.co.uk>

	* util1/csd_util/makecsd.c (main): new options for MIDI files and
	score processing; licence control as well

	* util1/csd_util/base64.c (encode_file): Added extra arg to select tags

2011-01-20  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/mp3in.c (mp3len): New code

	* SConstruct: Add building of fareyseq/fareygen which got lost

2011-01-17  john ffitch  <jpff@codemist.co.uk>

	* H/version.h: VERSION 5.13

2011-01-13  john ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (ko1set): ensure that the increment cannot be zero

2011-01-10  john ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c (gen49): Use csound->FileOpen2 rather than open
	to get searching
	(gen49): buffer used was in wrong units (chars v shorts)

2010-12-28  john ffitch  <jpff@codemist.co.uk>

	* Engine/symbtab.c (add_token): remove message if Opcode/Function
	confusion

2010-12-18  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/gab/tabmorph.c (atabmorphia): Fixed editing error that
	would have caused opcode to scribble over memory

2010-12-17  John ff  <jpff@cs.bath.ac.uk>

	* Opcodes/gab/vectorial.c: Lots of optimisations and corrections

2010-12-10  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/gab/gab.c (isChanged_set): Initialise p->old_inargs
